[gd_scene load_steps=2 format=2]

[ext_resource path="res://constructors/habits/HC.gd" type="Script" id=1]

[node name="HC" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
margin_right = 400.0
margin_bottom = 200.0
color = Color( 0.307274, 0.324574, 0.351563, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.5
margin_top = -20.0
margin_right = 20.5
text = "Criar"

[node name="Label" type="Label" parent="ColorRect"]
anchor_top = 0.2
anchor_bottom = 0.2
margin_top = -7.0
margin_right = 43.0
margin_bottom = 7.0
text = "Nome:"

[node name="LineEdit" type="LineEdit" parent="ColorRect/Label"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 10.0
margin_right = 58.0
margin_bottom = 24.0
max_length = 30
expand_to_text_length = true
placeholder_text = "Nome"

[node name="Label2" type="Label" parent="ColorRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_right = 40.0
margin_bottom = 14.0
text = "Quando:"

[node name="LineEdit" type="LineEdit" parent="ColorRect/Label2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 10.0
margin_right = 68.0
margin_bottom = 24.0
max_length = 2
placeholder_text = "99"
placeholder_alpha = 0.684

[node name="LineEdit2" type="LineEdit" parent="ColorRect/Label2"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 90.0
margin_right = 68.0
margin_bottom = 24.0
max_length = 2
placeholder_text = "99"
placeholder_alpha = 0.684

[node name="Label" type="Label" parent="ColorRect/Label2"]
margin_left = 128.0
margin_top = 4.0
margin_right = 168.0
margin_bottom = 18.0
text = ":"

[connection signal="pressed" from="ColorRect/Button" to="." method="_on_Button_pressed"]
